--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,11 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+prospector = "*"
 
 [packages]
 django = "*"
+django-debug-toolbar = "*"
 
 [requires]
 python_version = "3.7"
